# grpc-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PERF_REPORT.md
examples/: helloworld_client.rs  helloworld_server.rs  route_guide_client.rs  route_guide_server.rs
src/: client.rs  interceptor.rs  lib.rs  metadata.rs  retry.rs  server.rs  status.rs  tls.rs
src/codec/: gzip.rs  mod.rs
src/transport/: client.rs  mod.rs  server.rs
