[package]
name = "grpc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.13"
flate2 = "1"
h2 = "0.4"
http = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time"] }
base64 = "0.22"

[dev-dependencies]
prost = { version = "0.13", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
